2007-10-27 Jerry DeLisle <jvdelisle@gcc.gnu.org>

PR fortran/31306
	* decl.c (char_len_param_value): Add check for conflicting attributes of
	function argument.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129685 138bc75d-0d04-0410-961f-82ee72b054a4